objects/copado__User_Story__c.object.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>ByPassPRValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassPRValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_URL__c</fullName>
        <formula>HYPERLINK($Label.MPGJiraDomain+ &apos;/browse/&apos; + Jira_Key__c, &apos;Click Here&apos;, Jira_Key__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JIRA URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <label>Jira Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>User Story</label>
	<nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pull_request_Approval_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(copado__Promote_and_Deploy__c =true, 
copado__Promote_Change__c =true),
copado__Pull_Requests_Approved__c=false,ByPassPRValidation__c=false)</errorConditionFormula>
        <errorMessage>Pull request must be created and get it approved by one Peer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_Starts_with_Jira_Key</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(REGEX( copado__User_Story_Title__c , &quot;^SAL-[0-9]{1,5}[a-zA-Z0-9 ]*${0,250}&quot;)),  IF(NOT(REGEX( copado__User_Story_Title__c , &quot;^BDT-[0-9]{1,5}[a-zA-Z0-9 ]*${0,250}&quot;)), true, false) , false)</errorConditionFormula>
        <errorMessage>Please Start with Jira Key</errorMessage>
    </validationRules>
</CustomObject>